Compressed Token Indexing - interface improvements, tests