@@ -48,7 +48,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -76,17 +75,7 @@ public class DaoSearchParamSynchronizer {
 	@Autowired
 	private IHapiTransactionService myTransactionService;
 
-	/**
-	 * Custom secondary-index writers contributed by extensions (e.g. Smile CDR compressed token
-	 * indexing). Empty in vanilla HAPI. Injected via setter so it defaults to empty when no beans exist.
-	 */
-	private List<ICustomIndexSynchronizer> myCustomIndexSynchronizers = Collections.emptyList();
-
-	/**
-	 * Policies that may suppress writing a built-in index. Empty in vanilla HAPI (so all built-in
-	 * indexes are always written). A built-in index is written only if every policy allows it.
-	 */
-	private List<IBuiltInIndexWritePolicy> myBuiltInIndexWritePolicies = Collections.emptyList();
+	private SearchParamIndexProviderRegistry myIndexProviderRegistry = new SearchParamIndexProviderRegistry(List.of());
 
 	private UniqueIndexPreExistenceChecker myUniqueIndexPreExistenceChecker;
 
@@ -102,75 +91,73 @@ public class DaoSearchParamSynchronizer {
 			ResourceIndexedSearchParams theParams,
 			ResourceTable theEntity,
 			ResourceIndexedSearchParams existingParams,
-			boolean theResourceIsBeingCreated) {
+			boolean isNewResource) {
 		AddRemoveCount retVal = new AddRemoveCount();
 
-		// Each scalar built-in index may be suppressed by a write policy — e.g. Smile CDR's
-		// compressed-only phase, where a custom synchronizer has taken over token indexing entirely.
-		synchronizeIfAllowed(
+		synchronizeToken(
 				theRequestDetails,
 				theTransactionDetails,
 				theEntity,
 				retVal,
-				RestSearchParameterTypeEnum.STRING,
-				theParams.myStringParams,
-				existingParams.myStringParams);
-		synchronizeIfAllowed(
-				theRequestDetails,
-				theTransactionDetails,
-				theEntity,
-				retVal,
-				RestSearchParameterTypeEnum.TOKEN,
 				theParams.myTokenParams,
-				existingParams.myTokenParams);
-		synchronizeIfAllowed(
+				existingParams.myTokenParams,
+				isNewResource);
+		synchronize(
 				theRequestDetails,
 				theTransactionDetails,
 				theEntity,
 				retVal,
-				RestSearchParameterTypeEnum.NUMBER,
+				theParams.myStringParams,
+				existingParams.myStringParams,
+				null);
+		synchronize(
+				theRequestDetails,
+				theTransactionDetails,
+				theEntity,
+				retVal,
 				theParams.myNumberParams,
-				existingParams.myNumberParams);
-		synchronizeIfAllowed(
+				existingParams.myNumberParams,
+				null);
+		synchronize(
 				theRequestDetails,
 				theTransactionDetails,
 				theEntity,
 				retVal,
-				RestSearchParameterTypeEnum.QUANTITY,
 				theParams.myQuantityParams,
-				existingParams.myQuantityParams);
-		synchronizeIfAllowed(
+				existingParams.myQuantityParams,
+				null);
+		synchronize(
 				theRequestDetails,
 				theTransactionDetails,
 				theEntity,
 				retVal,
-				RestSearchParameterTypeEnum.QUANTITY,
 				theParams.myQuantityNormalizedParams,
-				existingParams.myQuantityNormalizedParams);
-		synchronizeIfAllowed(
+				existingParams.myQuantityNormalizedParams,
+				null);
+		synchronize(
 				theRequestDetails,
 				theTransactionDetails,
 				theEntity,
 				retVal,
-				RestSearchParameterTypeEnum.DATE,
 				theParams.myDateParams,
-				existingParams.myDateParams);
-		synchronizeIfAllowed(
+				existingParams.myDateParams,
+				null);
+		synchronize(
 				theRequestDetails,
 				theTransactionDetails,
 				theEntity,
 				retVal,
-				RestSearchParameterTypeEnum.URI,
 				theParams.myUriParams,
-				existingParams.myUriParams);
-		synchronizeIfAllowed(
+				existingParams.myUriParams,
+				null);
+		synchronize(
 				theRequestDetails,
 				theTransactionDetails,
 				theEntity,
 				retVal,
-				RestSearchParameterTypeEnum.SPECIAL,
 				theParams.myCoordsParams,
-				existingParams.myCoordsParams);
+				existingParams.myCoordsParams,
+				null);
 		synchronize(
 				theRequestDetails,
 				theTransactionDetails,
@@ -199,15 +186,6 @@ public class DaoSearchParamSynchronizer {
 		// make sure links are indexed
 		theEntity.setResourceLinks(theParams.myLinks);
 
-		// Let any registered custom secondary-index writers reconcile their own tables for this
-		// resource. No-op in vanilla HAPI (no synchronizers registered).
-		for (ICustomIndexSynchronizer synchronizer : myCustomIndexSynchronizers) {
-			AddRemoveCount customDelta = synchronizer.synchronize(
-					theRequestDetails, theTransactionDetails, theParams, theEntity, theResourceIsBeingCreated);
-			retVal.addToAddCount(customDelta.getAddCount());
-			retVal.addToRemoveCount(customDelta.getRemoveCount());
-		}
-
 		return retVal;
 	}
 
@@ -227,29 +205,33 @@ public class DaoSearchParamSynchronizer {
 	}
 
 	@Autowired(required = false)
-	public void setCustomIndexSynchronizers(List<ICustomIndexSynchronizer> theCustomIndexSynchronizers) {
-		myCustomIndexSynchronizers = theCustomIndexSynchronizers;
-	}
-
-	@Autowired(required = false)
-	public void setBuiltInIndexWritePolicies(List<IBuiltInIndexWritePolicy> theBuiltInIndexWritePolicies) {
-		myBuiltInIndexWritePolicies = theBuiltInIndexWritePolicies;
+	public void setSearchParamIndexProviderRegistry(SearchParamIndexProviderRegistry theRegistry) {
+		if (theRegistry != null) {
+			myIndexProviderRegistry = theRegistry;
+		}
 	}
 
 	/**
-	 * Synchronizes one scalar built-in index collection, unless a registered
-	 * {@link IBuiltInIndexWritePolicy} vetoes that index type for this resource. When vetoed, the
-	 * collection is skipped entirely: no new rows are written and pre-existing rows are left untouched.
+	 * Synchronizes one scalar built-in index collection and lets a registered
+	 * {@link ISearchParamIndexProvider} maintain its custom replacement for the same type. The built-in
+	 * write is skipped when a provider {@link ISearchParamIndexProvider#suppressesBuiltInIndex suppresses}
+	 * it; the custom provider (if one {@link ISearchParamIndexProvider#supports supports} the type) then
+	 * reconciles its own rows from the freshly extracted params.
+	 *
+	 * <p>Currently only invoked for {@link RestSearchParameterTypeEnum#TOKEN} — the sole type whose reads
+	 * are wired to custom providers — so custom index providers are consulted for TOKEN alone. The method
+	 * stays type-parameterized as the seam for wiring further types when their read paths are added.
 	 */
-	private <T extends BaseResourceIndex> void synchronizeIfAllowed(
+	private <T extends BaseResourceIndex> void synchronizeToken(
 			RequestDetails theRequestDetails,
 			TransactionDetails theTransactionDetails,
 			ResourceTable theEntity,
 			AddRemoveCount theAddRemoveCount,
-			RestSearchParameterTypeEnum theParamType,
 			Collection<T> theNewParams,
-			Collection<T> theExistingParams) {
-		if (shouldWriteBuiltInIndex(theEntity, theParamType)) {
+			Collection<T> theExistingParams,
+			boolean isNewResource) {
+		SearchParamIndexRouting routing = SearchParamIndexRouting.forParamType(RestSearchParameterTypeEnum.TOKEN);
+		if (!myIndexProviderRegistry.isBuiltInIndexWriteSuppressed(routing)) {
 			synchronize(
 					theRequestDetails,
 					theTransactionDetails,
@@ -259,23 +241,11 @@ public class DaoSearchParamSynchronizer {
 					theExistingParams,
 					null);
 		}
-	}
-
-	/**
-	 * Returns {@code true} unless a registered {@link IBuiltInIndexWritePolicy} vetoes writing the
-	 * built-in index of the given type for this resource. Any policy may veto; all must allow.
-	 */
-	private boolean shouldWriteBuiltInIndex(ResourceTable theEntity, RestSearchParameterTypeEnum theParamType) {
-		if (myBuiltInIndexWritePolicies.isEmpty()) {
-			return true;
-		}
-		String resourceType = theEntity.getResourceType();
-		for (IBuiltInIndexWritePolicy policy : myBuiltInIndexWritePolicies) {
-			if (!policy.shouldWriteBuiltInIndex(resourceType, theParamType)) {
-				return false;
-			}
-		}
-		return true;
+		myIndexProviderRegistry.resolveProvider(routing).ifPresent(provider -> {
+			AddRemoveCount delta = provider.synchronize(theRequestDetails, theNewParams, theEntity, isNewResource);
+			theAddRemoveCount.addToAddCount(delta.getAddCount());
+			theAddRemoveCount.addToRemoveCount(delta.getRemoveCount());
+		});
 	}
 
 	private <T extends BaseResourceIndex> void synchronize(
